criado o escopo do projeto, necessario arrumar erro de não conseguir adicionar controllers

--- a/ApiEldorianWebApplication/appsettings.json
+++ b/ApiEldorianWebApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Conexao": "Data Source=bancoEldorian.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
